Graph element wrappers were removed.